9.5 jenkins setup ready